--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,14 @@
   "version": 2,
   "builds": [
     {
-    "src": "dist/index",
+    "src": "src/index.ts",
     "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "(.*)",
+      "dest": "src/index.ts"
     }
   ]
 }
